@@ -169,6 +169,7 @@
             </goals>
             <configuration>
               <skip>false</skip>
+              <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
               <includes>
                 <include>**/**/**/*Test.java</include>
               </includes>
